--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -11,15 +11,18 @@ jobs:
       TOKEN_GITHUB: ${{ secrets.GITHUB_TOKEN }}
     steps:
     - uses: actions/checkout@v3
-    - name: Set up JDK 11
+    
+    # Set up JDK 8 which is compatible with Gradle 4.4
+    - name: Set up JDK 8
       uses: actions/setup-java@v3
       with:
-        java-version: '17'
+        java-version: '8'
         distribution: 'temurin'
         cache: gradle
 
     - name: Grant execute permission for gradlew
       run: chmod +x gradlew
+
     - name: Build with Gradle
       run: ./gradlew app:assembleRelease
 
@@ -31,5 +34,5 @@ jobs:
     - name: Upload build artifacts
       uses: actions/upload-artifact@v2
       with:
-        name: rongclouddemo-build-${{ github.sha }}
+        name: ProtoHax-build-${{ github.sha }}
         path: build.zip
